kubernetes/projects/apps/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
  - port: 80
    targetPort: 5055
