kubernetes/projects/apps/jellyseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  parentRefs:
  - name: axolotl
    namespace: istio-ingress
  hostnames:
  - request.axolotl.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyseerr
      port: 80
